<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <View
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:background="@color/white"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="20dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:theme="@style/Theme.AppCompat.Light.DarkActionBar"
        app:cardBackgroundColor="@color/activities_background">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/user_image"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:src="@drawable/vet_expert"
                app:civ_border_color="#FF000000"
                app:civ_border_width="2dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="20dp"
                android:paddingEnd="10dp"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/name"
                        android:textSize="13sp"
                        android:textColor="@color/black" />

                    <TextView
                        android:id="@+id/full_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/eg_raphael_kedii"
                        android:paddingStart="65dp"
                        android:paddingEnd="10dp"
                        android:textSize="13sp"
                        android:textColor="@color/white" />

                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/mobile_number"
                        android:textSize="13sp"
                        android:textColor="@color/black" />
                    <TextView
                        android:id="@+id/mobile_number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/eg_0726642205"
                        android:paddingStart="15dp"
                        android:paddingEnd="10dp"
                        android:textSize="13sp"
                        android:autoLink="phone"
                        android:textColor="@color/white" />

                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/kvb_no"
                        android:textSize="13sp"
                        android:textColor="@color/black" />
                    <TextView
                        android:id="@+id/kvb_number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="60dp"
                        android:paddingEnd="10dp"
                        android:text="@string/eg_2534"
                        android:textSize="13sp"
                        android:textColor="@color/white" />

                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/email_address"
                        android:textSize="13sp"
                        android:autoLink="email"
                        android:textColor="@color/black" />
                    <TextView
                        android:id="@+id/email_address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="22dp"
                        android:paddingEnd="10dp"
                        android:text="@string/eg_pavesagriapp_gmail_com"
                        android:textSize="13sp"
                        android:autoLink="email"
                        android:textColor="@color/white" />

                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/expertise"
                        android:textSize="13sp"
                        android:textColor="@color/black" />
                    <TextView
                        android:id="@+id/expertise"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="50dp"
                        android:paddingEnd="10dp"
                        android:text="@string/eg_animal_health_expert"
                        android:textSize="13sp"
                        android:textColor="@color/white" />

                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="13sp"
                        android:text="@string/location"
                        android:textColor="@color/black" />
                    <TextView
                        android:id="@+id/location"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="51dp"
                        android:paddingEnd="10dp"
                        android:textSize="13sp"
                        android:text="@string/eg_chepareria"
                        android:textColor="@color/white" />
                </LinearLayout>

            </LinearLayout>


        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <View
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:background="@color/white"/>

</LinearLayout>