<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/linearlayout_background"
    tools:context=".Splash_Screen_Activity">
    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="30dp"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/app_logo"
        app:srcCompat="@drawable/ic_launcher" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/slogan"
        android:textColor="#0000A0"
        android:textSize="20sp"
        android:textStyle="bold" />
    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="#0000A0" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/company"
        android:textColor="#FFFF00"
        android:textSize="20sp"
        android:textStyle="bold" />

</LinearLayout>
